--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
 
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="screen, print">   
-    <link type="text/css" rel="stylesheet" href="./css/style.css" media="screen, print">
+    <link type="text/css" rel="stylesheet" href="./assets/main.css" media="screen, print">
     
     <!-- jQuery -->
   <script src="./scripts/jquery-3.2.1.min.js"></script>
